--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "maturin"
 
 [project]
 name = "jsonatapy"
-version = "0.1.0"
+version = "2.1.0"
 description = "High-performance Python implementation of JSONata query and transformation language"
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "txjmb", email = "txjmb@users.noreply.github.com"}
 ]
 license = {text = "MIT"}
 readme = "README.md"
