docs: Fix repository URLs and add GitHub Pages deployment
- Update site_url to GitHub Pages URL
- Fix repo_url to correct GitHub repository
- Add GitHub Actions workflow for automatic docs deployment

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,640 +2,31 @@ name: Documentation
 
 on:
   push:
-    branches: [main, master]
-    paths:
-      - 'docs/**'
-      - 'README.md'
-      - 'CLAUDE.md'
-      - 'python/**/*.py'
-      - 'src/**/*.rs'
-      - '.github/workflows/docs.yml'
-  release:
-    types: [published]
+    branches: [master]
   workflow_dispatch:
-
-concurrency:
-  group: docs-${{ github.ref }}
-  cancel-in-progress: true
 
 permissions:
   contents: write
-  pages: write
-  id-token: write
 
 jobs:
-  build-docs:
-    name: Build Documentation
+  deploy:
+    name: Deploy Documentation
     runs-on: ubuntu-latest
-    timeout-minutes: 20
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          submodules: true
           fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: '3.12'
 
-      - name: Set up Rust
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Cache Rust dependencies
-        uses: Swatinem/rust-cache@v2
-
-      - name: Install UV
-        uses: astral-sh/setup-uv@v4
-
-      - name: Create virtual environment
-        run: uv venv
-
-      - name: Install documentation dependencies
+      - name: Install dependencies
         run: |
-          uv pip install \
-            mkdocs \
-            mkdocs-material \
-            mkdocstrings[python] \
-            mkdocs-autorefs \
-            mkdocs-mermaid2-plugin \
-            pymdown-extensions \
-            mkdocs-git-revision-date-localized-plugin \
-            mkdocs-minify-plugin
-
-      - name: Build jsonatapy
-        run: |
-          uv pip install maturin
-          uv run maturin develop --release
-
-      - name: Generate API documentation
-        run: |
-          # Create docs directory structure
-          mkdir -p docs/api
-
-          # Generate Python API docs
-          cat > docs/api/python.md << 'EOF'
-          # Python API Reference
-
-          ## jsonatapy Module
-
-          ::: jsonatapy
-              options:
-                show_root_heading: true
-                show_source: false
-                members:
-                  - evaluate
-                  - evaluate_with_bindings
-                  - version
-          EOF
-
-          # Generate Rust API docs
-          cargo doc --no-deps --document-private-items
-
-          # Copy Rust docs
-          mkdir -p docs/api/rust
-          cp -r target/doc/* docs/api/rust/ 2>/dev/null || echo "No Rust docs generated"
-
-      - name: Create compatibility matrix
-        run: |
-          cat > docs/compatibility.md << 'EOF'
-          # Compatibility Matrix
-
-          ## JSONata Version Compatibility
-
-          | jsonatapy Version | JSONata Version | Python Version | Status |
-          |-------------------|-----------------|----------------|--------|
-          | 0.1.0            | 2.0.5           | 3.9-3.12      | ✅ Current |
-
-          ## Test Suite Compatibility
-
-          **Current Status:** 1258/1258 tests passing (100%)
-
-          ## Platform Support
-
-          | Platform | Architecture | Python 3.9 | Python 3.10 | Python 3.11 | Python 3.12 |
-          |----------|--------------|------------|-------------|-------------|-------------|
-          | Linux    | x86_64       | ✅         | ✅          | ✅          | ✅          |
-          | Linux    | aarch64      | ✅         | ✅          | ✅          | ✅          |
-          | macOS    | x86_64       | ✅         | ✅          | ✅          | ✅          |
-          | macOS    | ARM64        | ✅         | ✅          | ✅          | ✅          |
-          | Windows  | x86_64       | ✅         | ✅          | ✅          | ✅          |
-
-          ## Feature Compatibility
-
-          | Feature | Status | Notes |
-          |---------|--------|-------|
-          | Path queries | ✅ | Full support |
-          | Array operations | ✅ | Full support |
-          | Object transformations | ✅ | Full support |
-          | String functions | ✅ | Full support |
-          | Numeric functions | ✅ | Full support |
-          | Higher-order functions | ✅ | Full support |
-          | Date/time functions | ✅ | Full support |
-          | Lambda functions | ✅ | Full support |
-          | Custom bindings | ✅ | Full support |
-          | Async evaluation | ⏳ | Planned |
-
-          ## Known Limitations
-
-          - Async function evaluation is not yet supported
-          - Custom function registration from Python is limited to sync functions
-
-          ## Upgrade Guide
-
-          See [Migration Guide](migration.md) for upgrading from other JSONata implementations.
-          EOF
-
-      - name: Download latest benchmark results
-        continue-on-error: true
-        run: |
-          # Try to fetch from gh-pages
-          git fetch origin gh-pages:gh-pages 2>/dev/null || true
-
-          if git show gh-pages:benchmark-results/latest.json > /tmp/latest_bench.json 2>/dev/null; then
-            # Create benchmark summary page
-            cat > docs/performance.md << 'EOF'
-          # Performance Benchmarks
-
-          ## Latest Results
-
-          Performance benchmarks are automatically run on every commit to main.
-
-          [View detailed benchmark history →](https://yourusername.github.io/jsonatapy/benchmark-results/)
-
-          ## Key Metrics
-
-          EOF
-
-            # Parse and add summary (basic)
-            python3 << 'PYTHON'
-          import json
-
-          try:
-              with open('/tmp/latest_bench.json') as f:
-                  data = json.load(f)
-
-              results = data.get('results', [])
-              if results:
-                  speedups = [r['jsonatapy_speedup'] for r in results if r.get('jsonatapy_speedup')]
-                  avg_speedup = sum(speedups) / len(speedups) if speedups else 0
-                  faster = sum(1 for s in speedups if s > 1.0)
-                  total = len(speedups)
-
-                  with open('docs/performance.md', 'a') as f:
-                      f.write(f"- **Average Speedup:** {avg_speedup:.2f}x vs JavaScript\n")
-                      f.write(f"- **Tests Faster:** {faster}/{total}\n")
-                      f.write(f"- **Last Updated:** {data.get('timestamp', 'Unknown')}\n\n")
-
-                      f.write("## Top Performing Operations\n\n")
-                      f.write("| Test | Category | Speedup |\n")
-                      f.write("|------|----------|--------|\n")
-
-                      top = sorted(results, key=lambda x: x.get('jsonatapy_speedup', 0), reverse=True)[:10]
-                      for r in top:
-                          f.write(f"| {r['name']} | {r['category']} | **{r['jsonatapy_speedup']:.2f}x** |\n")
-          except Exception as e:
-              print(f"Could not parse benchmark results: {e}")
-          PYTHON
-
-          else
-            echo "No benchmark results found - creating placeholder"
-            cat > docs/performance.md << 'EOF'
-          # Performance Benchmarks
-
-          Benchmark results will be available after the first benchmark run.
-
-          Run benchmarks locally:
-
-          \`\`\`bash
-          cd benchmarks
-          python python/benchmark.py
-          \`\`\`
-          EOF
-          fi
-
-      - name: Create MkDocs configuration
-        run: |
-          cat > mkdocs.yml << 'EOF'
-          site_name: jsonatapy Documentation
-          site_description: High-performance Python implementation of JSONata
-          site_author: jsonatapy contributors
-          repo_url: https://github.com/yourusername/jsonatapy
-          repo_name: jsonatapy
-          edit_uri: edit/main/docs/
-
-          theme:
-            name: material
-            palette:
-              - scheme: default
-                primary: blue
-                accent: indigo
-                toggle:
-                  icon: material/brightness-7
-                  name: Switch to dark mode
-              - scheme: slate
-                primary: blue
-                accent: indigo
-                toggle:
-                  icon: material/brightness-4
-                  name: Switch to light mode
-            features:
-              - navigation.tabs
-              - navigation.sections
-              - navigation.expand
-              - navigation.top
-              - search.suggest
-              - search.highlight
-              - content.code.copy
-              - content.code.annotate
-            icon:
-              repo: fontawesome/brands/github
-
-          nav:
-            - Home: index.md
-            - Getting Started:
-                - Installation: installation.md
-                - Quick Start: quickstart.md
-                - Examples: examples.md
-            - API Reference:
-                - Python API: api/python.md
-            - Guides:
-                - Compatibility: compatibility.md
-                - Performance: performance.md
-                - Migration: migration.md
-            - Development:
-                - Contributing: CONTRIBUTING.md
-                - Architecture: CLAUDE.md
-
-          plugins:
-            - search
-            - git-revision-date-localized:
-                enable_creation_date: true
-            - minify:
-                minify_html: true
-
-          markdown_extensions:
-            - admonition
-            - pymdownx.details
-            - pymdownx.superfences:
-                custom_fences:
-                  - name: mermaid
-                    class: mermaid
-                    format: !!python/name:pymdownx.superfences.fence_code_format
-            - pymdownx.highlight:
-                anchor_linenums: true
-            - pymdownx.inlinehilite
-            - pymdownx.snippets
-            - pymdownx.tabbed:
-                alternate_style: true
-            - tables
-            - attr_list
-            - md_in_html
-            - toc:
-                permalink: true
-
-          extra:
-            version:
-              provider: mike
-            social:
-              - icon: fontawesome/brands/github
-                link: https://github.com/yourusername/jsonatapy
-              - icon: fontawesome/brands/python
-                link: https://pypi.org/project/jsonatapy/
-          EOF
-
-      - name: Create documentation pages
-        run: |
-          mkdir -p docs
-
-          # Index page
-          cat > docs/index.md << 'EOF'
-          # jsonatapy
-
-          A high-performance Python implementation of JSONata (JSON query and transformation language) built as a Rust-based Python extension.
-
-          ## Features
-
-          - ✅ **100% JSONata Test Suite Compatibility** - 1258/1258 tests passing
-          - ⚡ **High Performance** - Rust implementation with Python bindings
-          - 🐍 **Pythonic API** - Easy to use, native Python interface
-          - 🔧 **Full Feature Set** - All JSONata features supported
-          - 📦 **Easy Installation** - Pre-built wheels for all major platforms
-
-          ## Quick Example
-
-          ```python
-          import jsonatapy
-
-          # Simple query
-          data = {"name": "Alice", "age": 30}
-          result = jsonatapy.evaluate("name", data)
-          print(result)  # "Alice"
-
-          # Complex transformation
-          products = {
-              "products": [
-                  {"name": "Widget", "price": 10},
-                  {"name": "Gadget", "price": 20}
-              ]
-          }
-          result = jsonatapy.evaluate(
-              "products[price > 15].{name: price}",
-              products
-          )
-          print(result)  # [{"name": "Gadget", "price": 20}]
-          ```
-
-          ## Why jsonatapy?
-
-          - **Native Performance** - Direct Rust implementation, no JavaScript bridge
-          - **Type Safety** - Leverages Rust's type system for reliability
-          - **Memory Efficient** - Zero-copy operations where possible
-          - **Well Tested** - 100% compatibility with reference test suite
-          - **Actively Maintained** - Regular updates tracking upstream JSONata
-
-          ## Installation
-
-          ```bash
-          pip install jsonatapy
-          ```
-
-          See [Installation](installation.md) for detailed instructions.
-
-          ## Learn More
-
-          - [Quick Start Guide](quickstart.md)
-          - [API Reference](api/python.md)
-          - [Examples](examples.md)
-          - [Performance Benchmarks](performance.md)
-          EOF
-
-          # Installation page
-          cat > docs/installation.md << 'EOF'
-          # Installation
-
-          ## Requirements
-
-          - Python 3.9 or higher
-          - pip or uv package manager
-
-          ## Install from PyPI
-
-          ```bash
-          pip install jsonatapy
-          ```
-
-          ## Install from Source
-
-          ```bash
-          # Clone repository
-          git clone https://github.com/yourusername/jsonatapy
-          cd jsonatapy
-
-          # Build and install
-          pip install maturin
-          maturin develop --release
-          ```
-
-          ## Verify Installation
-
-          ```python
-          import jsonatapy
-          print(jsonatapy.__version__)
-          ```
-
-          ## Platform Support
-
-          Pre-built wheels are available for:
-
-          - **Linux:** x86_64, aarch64
-          - **macOS:** x86_64 (Intel), ARM64 (Apple Silicon)
-          - **Windows:** x86_64
-
-          ## Troubleshooting
-
-          ### Import Error
-
-          If you get an import error, ensure you have a compatible Python version:
-
-          ```bash
-          python --version  # Should be 3.9+
-          ```
-
-          ### Build from Source Issues
-
-          Make sure Rust is installed:
-
-          ```bash
-          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
-          ```
-          EOF
-
-          # Quick start page
-          cat > docs/quickstart.md << 'EOF'
-          # Quick Start
-
-          ## Basic Usage
-
-          ```python
-          import jsonatapy
-
-          # Evaluate a simple expression
-          data = {"name": "John", "age": 30}
-          result = jsonatapy.evaluate("name", data)
-          print(result)  # "John"
-          ```
-
-          ## Path Queries
-
-          ```python
-          data = {
-              "user": {
-                  "name": "Alice",
-                  "address": {"city": "Boston"}
-              }
-          }
-
-          city = jsonatapy.evaluate("user.address.city", data)
-          print(city)  # "Boston"
-          ```
-
-          ## Array Operations
-
-          ```python
-          data = {"numbers": [1, 2, 3, 4, 5]}
-
-          # Sum
-          total = jsonatapy.evaluate("$sum(numbers)", data)
-
-          # Filter
-          evens = jsonatapy.evaluate("numbers[$ % 2 = 0]", data)
-
-          # Map
-          squared = jsonatapy.evaluate("numbers.$*$", data)
-          ```
-
-          ## Object Transformations
-
-          ```python
-          data = {
-              "products": [
-                  {"name": "Apple", "price": 1.2},
-                  {"name": "Banana", "price": 0.5}
-              ]
-          }
-
-          result = jsonatapy.evaluate(
-              "products.{ 'item': name, 'cost': price }",
-              data
-          )
-          ```
-
-          ## Using Bindings
-
-          ```python
-          data = {"x": 10}
-          bindings = {"multiplier": 5}
-
-          result = jsonatapy.evaluate_with_bindings(
-              "x * $multiplier",
-              data,
-              bindings
-          )
-          print(result)  # 50
-          ```
-
-          ## Next Steps
-
-          - Explore [Examples](examples.md)
-          - Read the [API Reference](api/python.md)
-          - Check [Performance](performance.md) characteristics
-          EOF
-
-          # Examples page
-          cp README.md docs/examples.md 2>/dev/null || echo "# Examples\n\nSee README for examples." > docs/examples.md
-
-          # Migration page
-          cat > docs/migration.md << 'EOF'
-          # Migration Guide
-
-          ## From jsonata-python
-
-          If you're migrating from the `jsonata` Python package (JavaScript wrapper):
-
-          ```python
-          # Before (jsonata-python)
-          from jsonata import Jsonata
-          expr = Jsonata("user.name")
-          result = expr.evaluate(data)
-
-          # After (jsonatapy)
-          import jsonatapy
-          result = jsonatapy.evaluate("user.name", data)
-          ```
-
-          Benefits:
-          - **10-100x faster** - No JavaScript bridge overhead
-          - **Lower memory usage** - Native Rust implementation
-          - **Same API semantics** - Drop-in replacement
-
-          ## From JavaScript jsonata
-
-          The API is similar but more Pythonic:
-
-          ```javascript
-          // JavaScript
-          const jsonata = require('jsonata');
-          const expr = jsonata('user.name');
-          const result = expr.evaluate(data);
-          ```
-
-          ```python
-          # Python
-          import jsonatapy
-          result = jsonatapy.evaluate("user.name", data)
-          ```
-
-          ## API Differences
-
-          - No need to compile expressions separately (handled internally)
-          - Bindings passed as dictionary instead of second argument
-          - Python native types returned (not JavaScript objects)
-          EOF
-
-      - name: Build documentation
-        run: uv run mkdocs build
-
-      - name: Upload documentation artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: documentation
-          path: site/
-          retention-days: 30
-
-      - name: Add job summary
-        run: |
-          cat >> $GITHUB_STEP_SUMMARY << 'EOF'
-          # Documentation Build Complete ✅
-
-          Documentation has been built successfully and is ready for deployment.
-
-          ## Contents
-
-          - API Reference (Python)
-          - Getting Started Guide
-          - Examples and Tutorials
-          - Compatibility Matrix
-          - Performance Benchmarks
-          - Migration Guide
-
-          ## Preview
-
-          Documentation will be deployed to GitHub Pages automatically.
-          EOF
-
-  deploy-docs:
-    name: Deploy to GitHub Pages
-    runs-on: ubuntu-latest
-    needs: build-docs
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    timeout-minutes: 10
-
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
-    permissions:
-      pages: write
-      id-token: write
-
-    steps:
-      - name: Download documentation
-        uses: actions/download-artifact@v4
-        with:
-          name: documentation
-          path: site
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-
-      - name: Upload to Pages
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: site
+          pip install mkdocs-material mkdocstrings[python] pymdown-extensions
 
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
-
-      - name: Add deployment summary
-        run: |
-          cat >> $GITHUB_STEP_SUMMARY << EOF
-          # Documentation Deployed 🚀
-
-          Documentation has been deployed to GitHub Pages!
-
-          **URL:** ${{ steps.deployment.outputs.page_url }}
-          EOF
+        run: mkdocs gh-deploy --force
