--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,5 +28,10 @@ jobs:
         run: |
           pip install mkdocs-material pymdown-extensions
 
+      - name: Configure git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
       - name: Deploy to GitHub Pages
         run: mkdocs gh-deploy --force
